--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "celery>=5.6.0",
     "channels[daphne]>=4.3.2",
     "django>=6.0",
+    "django-redis>=6.0.0",
     "djangorestframework>=3.16.1",
+    "python-decouple>=3.8",
 ]
