--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "django>=6.0",
     "django-redis>=6.0.0",
     "djangorestframework>=3.16.1",
+    "djangorestframework-simplejwt>=5.5.1",
     "python-decouple>=3.8",
 ]
