--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "celery>=5.6.0",
     "channels[daphne]>=4.3.2",
     "django>=6.0",
+    "django-cors-headers>=4.9.0",
     "django-redis>=6.0.0",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
